SoundSettings: Add charging vibration settings
Change-Id: Ie66f9261037bdab87b86cd49b558799decccd3b8

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -104,6 +104,10 @@
     <string name="berry_black_theme_title">Pure black</string>
     <string name="berry_black_theme_summary">Pure black background for dark theme</string>
 
+    <!-- Charging vibration -->
+    <string name="charging_sounds_nos_title">Charging sound</string>
+    <string name="charging_vibro_title">Charging vibration</string>
+
     <!-- Connected devices screen, setting option name to change bluetooth timeout -->
     <string name="bluetooth_timeout">Bluetooth timeout</string>
 
