--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -41,6 +41,9 @@
     <string name="gesture_back_deadzone_label">Dead zone</string>
     <string name="back_sensitivity_dialog_message_cust">Use the first and second seekbar to configure back swipe sensitivity, the last seekbar to set a dead area on top of the screen where the swipe cannot be triggered, to avoid conflicts with in-app gestures.</string>
 
+    <!-- Battery Temperature -->
+    <string name="battery_temp">Battery temperature</string>
+
     <!-- Black theme for dark mode -->
     <string name="berry_black_theme_title">Pure black</string>
     <string name="berry_black_theme_summary">Pure black background for dark theme</string>
