Settings: support black theme for dark mode [2/3]
Change-Id: I12451c0b72f73b08b885e8103bbe3e74a0c4e19f
Signed-off-by: althafvly <althafvly@gmail.com>

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -31,6 +31,10 @@
     <string name="adb_enable_root">Rooted debugging</string>
     <string name="adb_enable_summary_root">Allow running Android debugging as root</string>
 
+    <!-- Black theme for dark mode -->
+    <string name="berry_black_theme_title">Pure black</string>
+    <string name="berry_black_theme_summary">Pure black background for dark theme</string>
+    
     <!-- Display settings screen, peak refresh rate settings summary [CHAR LIMIT=NONE] -->
     <string name="peak_refresh_rate_summary_custom">Automatically raises the refresh rate from 60 to %1$d Hz for some content. Increases battery usage.</string>
 
