--- a/res/values/awaken_config.xml
+++ b/res/values/awaken_config.xml
@@ -22,6 +22,11 @@
          but a dedicated one, i.e. not embedded in the power button. -->
     <bool name="config_is_side_fps" translatable="false">false</bool>
 
+    <!-- Battery health -->
+    <string name="config_batteryHealthNode"></string>
+    <string name="config_batteryRemainingCapacityNode"></string>
+    <string name="config_batteryDesignCapacityNode"></string>
+
     <!-- Device specific doze package -->
     <string name="config_customDozePackage" translatable="false"></string>
 
