--- a/res/values/awaken_dimens.xml
+++ b/res/values/awaken_dimens.xml
@@ -14,10 +14,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-    <!-- Indicates whether device has a front facing fingerprint sensor (not udfps). -->
-    <bool name="config_is_front_facing_fps" translatable="false">false</bool>
 
-    <!-- Device specific doze package -->
-    <string name="config_customDozePackage" translatable="false"></string>
+<resources>
+    <!-- Fingerprint -->
+    <dimen name="fingerprint_find_sensor_padding_top">16dp</dimen>
 </resources>
