--- a/res/values/awaken_styles.xml
+++ b/res/values/awaken_styles.xml
@@ -22,18 +22,33 @@
     <style name="CustomPreference" parent="Preference.Material">
         <item name="allowDividerAbove">false</item>
     </style>
-    
+
     <!--Redesign about phone-->
     <style name="TextAppearance.awakenInfoTitle">
         <item name="android:textColor">?android:attr/textColorPrimary</item>
-        <item name="android:textSize">12sp</item> <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textAllCaps">true</item>
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
     <style name="TextAppearance.awakenInfoSummary"> 
-        <item name="android:textColor">?android:attr/textColorSecondary</item> 
+        <item name="android:textColor">?android:attr/textColorSecondary</item>
         <item name="android:textSize">12.5sp</item>
         <item name="android:lineSpacingMultiplier">1.3</item>
         <item name="android:fontFamily">sans-serif-book</item>
+    </style>
+
+    <!-- xd. Action Bar -->
+    <style name="xd_toolbar.Expanded" parent="xd_toolbar.Collapsed">
+        <item name="android:textSize">35dp</item>
+        <item name="android:textColor">@color/settingslib_text_color_primary_device_default</item>
+        <item name="android:fontFamily">@*android:string/config_headlineFontFamilyMedium</item>
+    </style>
+
+    <!-- xd. ToolBar Collapsed -->
+    <style name="xd_toolbar.Collapsed" parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title">
+        <item name="android:fontFamily">@string/settingslib_config_headlineFontFamily</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/settingslib_text_color_primary_device_default</item>
     </style>
 </resources>
