Settings: Allow toggling in-call notifications
Just expose what AOSP already has, follow the code of other nearby toggles

Change-Id: Id80bed36ebe179d00908aa2c1423a1bb88a4a744

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -226,6 +226,9 @@
     <!-- Label for device's hardware ram size [CHAR LIMIT=40] -->
     <string name="total_ram">Total available RAM</string>
 
+    <!-- In-call notifications -->
+    <string name="in_call_notifications_title">In-call notifications</string>
+
     <!-- Increasing ring tone volume -->
     <string name="increasing_ring_volume_option_title">Increasing ring volume</string>
     <string name="increasing_ring_min_volume_title">Start volume</string>
