--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -186,7 +186,8 @@
             android:order="48"
             android:title="@string/status_up_time"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"/>
+            android:selectable="false"
+            settings:layout="@layout/awakenos_dashboard_preference_top" />
 
         <!-- Manual -->
         <Preference
@@ -217,7 +218,8 @@
             android:title="@string/build_number"
             android:summary="@string/summary_placeholder"
             settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
+            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"
+            settings:layout="@layout/awakenos_dashboard_preference_middle" />
     </PreferenceCategory>
 
 </PreferenceScreen>
