--- a/res/xml/security_advanced_settings.xml
+++ b/res/xml/security_advanced_settings.xml
@@ -66,6 +66,13 @@
         android:title="@string/app_lock_title" />
 
     <Preference
+        android:order="30"
+        android:key="screen_lock_settings"
+        android:title="@string/screen_lock_settings_title"
+        android:summary="@string/screen_lock_settings_summary"
+        android:fragment="com.android.settings.security.screenlock.ScreenLockSettings" />
+
+    <Preference
         android:order="50"
         android:key="sim_lock_settings"
         android:title="@string/sim_lock_settings_category"
