Add Awaken Lab to Dashboard

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -447,4 +447,8 @@
 
     <!-- Location settings screen, setting summary for Assisted GPS switch -->
     <string name="assisted_gps_summary">Download satellite assistance data from the internet which can greatly improve the GPS startup performance. For emergency calls, assisted GPS is always allowed.</string>
+
+    <!-- awaken Lab -->
+    <string name="awaken_lab_dash_title">Awaken Lab</string>
+    <string name="awaken_lab_summary">Rise of useful features.</string>
 </resources>
